[package]
name = "spuristo"
authors = ["LBlend <lblend@protonmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-channel = "1.6.1"
bluer = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
structopt = "0.3.25"
tokio = { version = "1.12.0", features = ["full"] }
tokio-cron-scheduler = "0.3.1"