[package]
name = "spuristo"
authors = ["LBlend <lblend@protonmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
async-channel = "1.6"
bluer = { version = "0.15", features = ["bluetoothd"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.19", features = ["full"] }
tokio-cron-scheduler = "0.3"